[package]
name = "lua-string-lit"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
analisar = "0.4"
bstr = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"


[dev-dependencies]
env_logger = "0.11"
insta = "1.46.1"
