[package]
name = "lua-string-lit"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/FreeMasen/lua-string-lit"
homepage = "https://gh.freemasen.com/lua-string-lit"
description = "A tool that will scan a directory for any `.lua` files and collect all string literals they contain."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
analisar = "0.4"
bstr = { version = "1", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"


[dev-dependencies]
env_logger = "0.11"
insta = "1.46.1"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
